Fix align center issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -574,6 +574,8 @@ a:hover {
   width: 350px;
   height: 400px;
   padding: 10px;
+  margin-left: auto;
+  margin-right: auto;
   border-bottom: 2px solid transparent;
   transition: .5s all;
   margin-bottom: 20px;
@@ -970,6 +972,8 @@ a:hover {
   padding: 60px 20px;
   border-left: 1px solid rgba(236, 239, 241, 0.07);
   border-top: 1px solid rgba(236, 239, 241, 0.07);
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 40px;
   box-shadow: 2px 2px 5px rgba(44, 44, 44, 0.3), 13px 13px 0 rgba(255, 255, 255, 0.7);
 }
@@ -984,6 +988,8 @@ a:hover {
 ==================================================================*/
 .service-2 .service-item {
   border: 1px solid #eee;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 30px;
   padding: 50px 20px;
   transition: all 0.3s ease 0s;
@@ -1043,6 +1049,8 @@ a:hover {
 ==================================================================*/
 .team-member {
   background-color: #292F36;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 10px;
 }
 
@@ -1240,10 +1248,18 @@ a:hover {
   border: 1px solid #4e595f;
 }
 
+@media (max-width: 768px) {
+  .post-block img {
+    display: inline-block;
+  }
+}
+
 .post-block {
   background-color: #292F36;
   width: 300px;
   height: 400px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 10px;
 }
 
